--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,26 @@
 asgiref==3.8.1
-Django==5.0.4
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==42.0.5
+defusedxml==0.8.0rc2
+dj-rest-auth==5.1.0
+Django==4.2.11
+django-allauth==0.61.1
+django-rest-auth==0.9.5
 djangorestframework==3.15.1
+idna==3.6
+oauthlib==3.2.2
 pillow==10.3.0
+pycparser==2.22
+PyJWT==2.8.0
+python3-openid==3.2.0
+pytz==2024.1
+requests==2.31.0
+requests-oauthlib==2.0.0
+six==1.16.0
+social-auth-app-django==5.4.0
+social-auth-core==4.5.3
 sqlparse==0.4.4
 typing_extensions==4.11.0
+urllib3==2.2.1
